# AudioSpectrum

./: .gitignore  .mxproject  .project  CMakeLists.txt  CMakePresets.json  HalVersion Debug.launch  README.md
CMake/: toolchain-arm-gcc.cmake
Core/: CMakeLists.txt
Core/CMSIS_HAL/: CMakeLists.txt
Core/CMSIS_HAL/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_adc.h
Core/CMSIS_HAL/USB_DEVICE/App/: usbd_cdc_if.c
Core/Inc/: fft.h  spiInterface.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  ws2812bDriver.h  ws2812bHW.h
Core/Src/: activity.c  adc.c  communication.c  main.c  spi.c  spiBuffer.c  stm32f4xx_it.c  tim.c
Docs/: CompilerFlagsDescription.txt
HalVersion/: .cproject  .mxproject  HalVersion.ioc
HalVersion/CMake/: toolchain-arm-gcc.cmake
HalVersion/Core/: CMakeLists.txt  compiler_flags.cmake
HalVersion/Core/Inc/: activity.h  animations.h  communication.h  fft.h  spiBuffer.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usbInterface.h  ws2812bDriver.h  ws2812bHW.h
HalVersion/Core/Src/: activity.c  adc.c  animations.c  communication.c  fft.c  gpio.c  main.c  spi.c  spiBuffer.c  spiInterface.c  stm32f4xx_it.c  tim.c  usbInterface.c  ws2812bDriver.c
HalVersion/Scripts/: createDepForMocks.py
HalVersion/Tests/: CMakeLists.txt  Test_SpiBuffer.c  create_mock.rb  main.c
HalVersion/Tests/Test_Activity/: CMakeLists.txt  Test_Activity.c  main.c
HalVersion/Tests/Test_Animations/: CMakeLists.txt  Test_Animations.c  main.c
HalVersion/Tests/Test_Communication/: CMakeLists.txt  Test_Communication.c  main.c
HalVersion/Tests/Test_SpiBuffer/: CMakeLists.txt  Test_SpiBuffer.c
HalVersion/Tests/Test_Ws2812bDriver/: CMakeLists.txt  Test_Ws2812bDriver.c  main.c
HalVersion/USB_DEVICE/App/: usbd_cdc_if.c
Tests/: CMakeLists.txt  TestTemplate.c  create_mock.rb
Tests/Test_Activity/: CMakeLists.txt  Test_Activity.c  main.c
Tests/Test_Animations/: CMakeLists.txt  Test_Animations.c
Tests/Test_Communication/: CMakeLists.txt  main.c
Tests/Test_SpiBuffer/: CMakeLists.txt
Tests/Test_Ws2812bDriver/: CMakeLists.txt  Test_Ws2812bDriver.c
Tests/cmock/: CMakeLists.txt
Tests/unity/: CMakeLists.txt
